Feat: Nova rota
