# index.js
@@ -2,6 +2,7 @@ import express from 'express';
 import cors from 'cors';
 import usuarioRoute from './routes/usuario.route.js';
 import produtoRoute from './routes/produto.route.js';
+import pedidoRoute from './routes/pedido.route.js';
 import swaggerUi from 'swagger-ui-express'
 import { createRequire } from "module";
 const require = createRequire(import.meta.url);
@@ -20,6 +21,7 @@ app.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson));
 //rotas
 app.use('/usuario', usuarioRoute);
 app.use('/produto', produtoRoute);
+app.use('/pedido', pedidoRoute);
 
 app.listen(3000, () => {
     console.log('Server is running on port 3000');
